tests/basic/check/not_neg/030.pan.out
tests/basic/check/not_neg/030.pan:4:1-4: error: unable to verify type of f30
tests/basic/check/not_neg/030.pan:7:1-4: error: unable to verify type of f31